Link externo a receta, creación otra carpeta index

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <h2><a href="https://www.allrecipes.com/recipe/10373/dads-favorite-peanut-butter-cookies/">Peanut Butter Cookies</a></h2>
     </body>
 </html>
