add index.html minor changes in the other .html

--- a/odin-recipes/recipes/peanutbuttercookies.html
+++ b/odin-recipes/recipes/peanutbuttercookies.html
@@ -30,10 +30,7 @@
             <li>Roll chilled dough into walnut-sized balls and place 2 inches apart onto baking sheets. Flatten dough balls with a fork dipped in flour to form a crosswise pattern.</li>
             <li>Bake in the preheated oven until edges are set, 10 to 12 minutes. Transfer cookies to a wire rack to cool completely.</li>
         </ol>
-        <h2>INDEX RECIPES<ul>
-            <li><a href="/recipes/peanutbuttercookies.html">Recipe 1</a></li>
-            <li><a href="recipes/yourrecipe.html">Recipe 2</a></li>
-            <li><a href="recipes/yourrecipe.html">Recipe 3</a></li>
-          </ul></h2>     
+        <h1><a href="index.html">BACK INDEX</a></h1>
+        
     </body>
 </html>
