--- a/odin-recipes/recipes/index.html
+++ b/odin-recipes/recipes/index.html
@@ -5,8 +5,11 @@
         <title>Odin Project html</title>    
     </head>
     <body>
+        <video src="/No.Country.for.Old.Men.2007.1080p.BluRay.H264.AAC-LAMA.mp4" width="420" height="240" controls>
+            Video not supported
+        </video>
         <h1>INDEX RECIPES<ul>
-            <li><a href="/peanutbuttercookies.html">Recipe 1</a></li>
+            <li><a href="/odin-recipes/recipes/peanutbuttercookies.html">Recipe 1</a></li>
             <li><a href="recipes/yourrecipe.html">Recipe 2</a></li>
             <li><a href="recipes/yourrecipe.html">Recipe 3</a></li>
           </ul></h1>     
