--- a/odin-recipes/recipes/peanutbuttercookies.html
+++ b/odin-recipes/recipes/peanutbuttercookies.html
@@ -2,17 +2,21 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link href="/odin-recipes/recipes/style.css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
         <title></title>
     </head>
     <body>
         <h1>Odin Recipes</h1>
         <h1><a href="https://www.allrecipes.com/recipe/10373/dads-favorite-peanut-butter-cookies/">Peanut Butter Cookies</a></h1>
-        <img src="/images/cookie.jpg" alt="dad's favorite peanut butter cookies jpg">
+        <img class="cookie" src="/odin-recipes/recipes/images/cookie.jpg" alt="dad's favorite peanut butter cookies jpg">
         <h5>Are you ready for dad's favorite peanut cookies?</h5>
         <p>prep time:15 mins, cook time:10 mins, additional time:1 hr.</p>
         <p>Total time:1hr 25mins, servings:36, yield:3 dozen.</p>
         <h2>Ingredients</h2>
-        <ul>
+        <ul class="list-of-ingredients">
             <li>1/2 cup shortening</li>
             <li>1/2 cup crunchy peanut butter</li>
             <li>1/2 cup white sugar</li>
@@ -30,7 +34,7 @@
             <li>Roll chilled dough into walnut-sized balls and place 2 inches apart onto baking sheets. Flatten dough balls with a fork dipped in flour to form a crosswise pattern.</li>
             <li>Bake in the preheated oven until edges are set, 10 to 12 minutes. Transfer cookies to a wire rack to cool completely.</li>
         </ol>
-        <h1><a href="index.html">BACK INDEX</a></h1>
+        <h3><a href="index.html">BACK INDEX</a></h3>
         
     </body>
 </html>
